# ten-framework

./: .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  README-CN.md  README-ES.md  README-FR.md  README-IT.md  README-JP.md  README-KR.md  README.md  Taskfile.yml  biome.json  eslint.config.mjs  package-lock.json  package.json  pyrightconfig.json
core/src/ten_manager/: BUILD.gn  Cargo.toml
core/src/ten_manager/designer_frontend/: biome.json  eslint.config.js  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
core/src/ten_manager/designer_frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
core/src/ten_manager/src/: cmd_line.rs  json.rs  lib.rs  main.rs  memory_stats.rs  version.rs  version_utils.rs
core/src/ten_manager/src/cmd/: cmd_completion.rs  cmd_create.rs  cmd_delete.rs  cmd_designer.rs  cmd_fetch.rs  cmd_install.rs  cmd_package.rs  cmd_publish.rs  cmd_run.rs  cmd_uninstall.rs  mod.rs
core/src/ten_manager/src/config/: mod.rs
core/src/ten_manager/src/constants/: mod.rs  registry.rs  tag.rs
core/src/ten_manager/src/create/: mod.rs
core/src/ten_manager/src/dep_and_candidate/: mod.rs
core/src/ten_manager/src/designer/: common.rs  frontend.rs  locale.rs  mod.rs  response.rs
core/src/ten_manager/src/fs/: file_type.rs  file_watcher.rs  json.rs  log_file_watcher.rs  mod.rs
core/src/ten_manager/src/graph/: compatible.rs  mod.rs  msg_conversion.rs
core/src/ten_manager/src/home/: config.rs  data.rs  mod.rs  package_cache.rs
core/src/ten_manager/src/install/: installed_paths.rs  mod.rs  template.rs
core/src/ten_manager/src/log/: mod.rs
core/src/ten_manager/src/manifest_lock/: mod.rs
core/src/ten_manager/src/output/: channel.rs  cli.rs  mod.rs
core/src/ten_manager/src/package_file/: mod.rs  package.rs  unpackage.rs
core/src/ten_manager/src/pkg_info/: get_all_pkgs.rs  mod.rs
core/src/ten_manager/src/registry/: found_result.rs  local.rs  mod.rs  pkg_cache.rs  pkg_list_cache.rs  remote.rs  search.rs
core/src/ten_manager/src/schema/: definition.rs  mod.rs
core/src/ten_manager/src/solver/: introducer.rs  solve.rs  solver_error.rs  solver_result.rs
core/src/ten_manager/tests/test_case/: mod.rs
core/src/ten_manager/tests/test_data/: app_manifest.json  app_property.json  app_property_2.json  app_property_3.json  app_property_without_uri.json  exoected_property__update_graph.json  exoected_property__update_graph_1.json  expected_app_property_1.json  expected_app_property_after_update_complex_property.json  expected_app_property_after_update_property.json  expected_json__connection_added_with_msg_conversion.json  expected_json__connection_added_with_msg_conversion_keep_original.json  expected_json__connection_with_msg_and_result_conversion.json  expected_json__connection_with_msg_conversion.json  expected_json__connection_with_removed_msg_conversion.json  expected_json__connection_with_updated_msg_conversion.json  expected_json__connection_with_updated_msg_conversion_1.json  expected_json__connection_with_updated_msg_conversion_2.json  expected_json__test_add_graph_connection_data_type.json  expected_json__test_add_graph_connection_frame_types.json  expected_json__test_add_graph_connection_preserves_order.json  expected_json__test_add_graph_connection_success.json  expected_json__test_add_multiple_connections_preservation_order.json  expected_property.json  expected_property_add_connection_2.json  expected_property_after_adding_in_test_delete_graph_node_success.json  expected_property_delete_connection.json  expected_property_with_modified_msg_conversion.json  expected_property_with_msg_conversion.json  expected_property_with_new_node.json  expected_update_graph_node_property.json  extension_1_manifest.json  extension_2_manifest.json  extension_2_manifest_2.json  extension_2_manifest_3.json  extension_addon_1_manifest.json  extension_addon_1_with_complex_property_manifest.json  extension_addon_2_manifest.json  extension_addon_3_manifest.json  extension_addon_4_manifest.json  (+6 more)
core/src/ten_rust/: BUILD.gn  Cargo.toml  rustfmt.toml
core/src/ten_rust/src/: backtrace.rs  bindings.rs  build.rs  env.rs  lib.rs  path.rs
core/src/ten_rust/src/base_dir_pkg_info/: mod.rs
core/src/ten_rust/src/constants/: mod.rs  service_hub.rs
core/src/ten_rust/src/crypto/: bindings.rs  mod.rs
core/src/ten_rust/src/graph/: graph_info.rs  mod.rs  reverse.rs  selector.rs  subgraph.rs
core/src/ten_rust/src/json/: bindings.rs  mod.rs
core/src/ten_rust/src/json_schema/: bindings.rs  definition.rs  mod.rs
core/src/ten_rust/src/log/: bindings.rs  decrypt.rs  dynamic_filter.rs  encryption.rs  file_appender.rs  mod.rs  reloadable.rs
core/src/ten_rust/src/pkg_info/: constants.rs  hash.rs  language.rs  mod.rs  pkg_basic_info.rs  pkg_type.rs  pkg_type_and_name.rs  supports.rs  value_type.rs
core/src/ten_rust/src/schema/: bindings.rs  runtime_interface.rs  store.rs
core/src/ten_rust/src/service_hub/: bindings.rs  mod.rs
core/src/ten_rust/src/utils/: fs.rs  mod.rs  path.rs  uri.rs
core/src/ten_rust/tests/test_case/: bindings.rs  crypto_test.rs  graph_check.rs  mod.rs  path.rs  test_mock.rs
core/src/ten_rust/tests/test_data/: dump_property_with_msg_conversion.json  extension_manifest_has_all_types_schema.json  extension_manifest_with_interface.json  extension_manifest_with_local_file_interface.json  graph_app_can_not_be_empty_string.json  graph_message_conversion_fixed_value.json  graph_result_conversion_in_not_allowed_flow.json  predefined_graph_app_in_connections_not_all_declared.json  predefined_graph_app_in_connections_should_not_declared.json  predefined_graph_app_in_dest_not_all_declared.json  predefined_graph_app_in_dest_should_not_declared.json  predefined_graph_app_in_nodes_not_all_declared.json  predefined_graph_connection_app_localhost.json  predefined_graph_connection_dest_not_found.json  predefined_graph_connection_src_not_found.json  predefined_graph_current_app_no_extensions.json  predefined_graph_has_duplicated_extension.json  predefined_graph_no_extensions.json  property.json  (+4 more)
(+3218 files in other folders)
