[[bin]]
name = "tman"
path = "src/main.rs"

[package]
name = "ten_manager"
version = "0.1.0"
edition = "2021"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator", "dep:jemalloc-sys"]

[dependencies]
ten_rust = { path = "../ten_rust", version = "0.1.0", default-features = false, features = [
] }
actix = { version = "0.13.5" }
actix-cors = { version = "0.7", default-features = false }
actix-files = { version = "0.6", default-features = false }
actix-rt = { version = "2.10", default-features = false, features = ["macros"] }
actix-web = { version = "4.8", default-features = false, features = ["macros"] }
actix-web-actors = { version = "4.3.1", default-features = false }
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4.5" }
clingo = { version = "0.8" }
console = { version = "0.15" }
dirs = { version = "6.0" }
flate2 = "1.0.35"
fs_extra = "1.3.0"
futures = "0.3"
futures-util = { version = "0.3" }
globset = { version = "0.4" }
handlebars = { version = "6.2" }
ignore = { version = "0.4" }
indicatif = { version = "0.17" }
infer = "0.16.0"
inquire = { version = "0.7.5" }
jaq-core = "2.0.0"
jaq-json = { version = "1.0.0", features = ["serde_json"] }
jaq-std = "2.0.0"
json5 = { version = "0.4" }
jsonschema = { version = "0.28", default-features = false }
mime_guess = { version = "2.0.5" }
portable-pty = { version = "0.8.1" }
regex = { version = "1.11" }
remove_dir_all = { version = "1.0" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = { version = "0.10" }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tar = "0.4.43"
tempfile = { version = "3.10" }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "process",
  "macros",
] }
tokio-macros = "2.5.0"
url = { version = "2.5" }
uuid = { version = "1.0" }
walkdir = { version = "2.5" }
zip = { version = "2.2", default-features = false, features = [
  "deflate",
  "time",
] }
crossbeam-channel = "0.5.15"
libc = "0.2.172"
winapi = { version = "0.3.9", features = ["fileapi"] }

[target."cfg(unix)".dependencies]
mimalloc = { version = "0.1", optional = true }
jemallocator = { version = "0.5", optional = true, features = ["stats"] }
jemalloc-sys = { version = "0.5", optional = true, features = ["stats"] }

[target."cfg(unix)".dependencies.clingo]
version = "0.8"
features = ["static-linking"]

[dev-dependencies]
tempfile = "3.5"
urlencoding = "2.1"
tokio-tungstenite = { version = "0.21", features = ["connect"] }

[patch.crates-io]
clingo-sys = { path = "../../../third_party/clingo-sys" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
