[package]
name = "ten_rust"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[lib]
name = "ten_rust"

# The `ten_rust` crate will be used in the following two ways:
#
# 1. Used as a dependency in other Rust crates, ex: tman. In this case, the
# crate type can not be `staticlib`, as the native library can not be
# interpreted by rustc in the linkage. Instead, the crate should be compiled
# into a `rlib`, which is a Rust static library, and can be interpreted by rustc
# in the linkage.
#
# 2. Used as a native library in other languages, ex: ten runtime. In this case,
# the crate type should be a native static or dynamic library. That's what the
# `staticlib` crate type is for.
crate-type = ["staticlib", "rlib"]
test = true

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
aes = "0.8.4"
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde", "clock"] }
ctr = "0.9.2"
futures = "0.3.31"
json5 = { version = "0.4" }
jsonschema = { version = "0.32", default-features = false }
libc = { version = "0.2" }
once_cell = "1.19.0"
prometheus = "0.14"
regex = { version = "1.11" }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = { version = "0.10" }
tempfile = { version = "3.10" }
url = { version = "2.5" }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1.0", features = [
  "rt",
  "rt-multi-thread",
  "test-util",
  "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "std"] }
tracing-appender = "0.2"
serial_test = "3.2.0"
backtrace = "0.3"

[build-dependencies]
bindgen = { version = "0.72", optional = true }

[features]
default = ["service-hub"]
service-hub = []
deprecated = ["bindgen"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
